fix: issue where scrollbars are always shown for ScrollView

--- a/packages/ui/src/theme/css/component/scrollView.scss
+++ b/packages/ui/src/theme/css/component/scrollView.scss
@@ -1,14 +1,14 @@
 .amplify-scrollview {
   display: block;
-  overflow: scroll;
+  overflow: auto;
 
   &[data-orientation='horizontal'] {
-    overflow-x: scroll;
+    overflow-x: auto;
     overflow-y: initial;
   }
 
   &[data-orientation='vertical'] {
     overflow-x: initial;
-    overflow-y: scroll;
+    overflow-y: auto;
   }
 }
